Changelog (English)
===================

1.4.7
Fixed packages list of Arch Linux (issue #161)
Fixed error with VNC_ARGS (issue #153)
User root is added to the group aid_inet be default (ticket #135)

1.4.6
Added option to disable the built-in shell
Operating environment by default: /data/data/ru.meefik.linuxdeploy/linux
Added sync in framebuffer
Added ACCESS_SUPERUSER permission
Fixed packages list of Arch Linux (issue #136)
Fixed packages list of openSUSE

1.4.5
Added support SELinux
BusyBox dynamically linked (fixed DNS resolver)
Added support Ubuntu 14.04 (Trusty Tahr)
Fixed X Window System startup
Fixed dbus configuration

1.4.4
Added support Fedora 20 (armhfp)
Added VNC options
Bugs fixed
Fixed broken packages in Arch Linux

1.4.3
Added support Ubuntu 13.10 (Saucy Salamander)
Added three modes Android UI freeze
Added autostart dbus in X-server mode and framebuffer
Added an property "X options" for framebuffer
Fixed list of packages openSUSE installation
Change tightvnc to tigervnc in Arch Linux

1.4.2
Added support Debian 8.0 (jessie)
Interface improvements
Added ability to choose components to install

1.4.1
Added support for installation from rootfs archives (tgz, tbz2)
Added custom installation type (install without make new image file and filesystem)
Bugfix: changing font size
Improved mechanism of disk image file creation (fast re-creation)
Improved framebuffer support

1.4.0
Added function of import/export profiles
Support Android 2.1 (API 7)
Updated list of packages openSUSE (armv7hl)
Added support Fedora 19
Automatic detection of screen resolution (for VNC)
Improved command line utility linuxdeploy

1.3.9
Added support Gentoo (installation requires at least 4 GB of free space)
Limitation of scroll buffer size
Automatic mount /dev/shm
Updated debootstrap up to 1.0.48
Support for multiple input devices in framebuffer mode (in xorg.conf changed lines are marked as #linuxdeploy)
Hide icon in notification bar after you exit the application